--- a/index.css
+++ b/index.css
@@ -1294,7 +1294,7 @@ form button:hover{
     width: 100%;
 }
 .color-red{
-    background: #c70039;
+    background: #1ce0ec;
 }
 .color-purple{
     background: #481380;
